# FYP-simulator

./: DESIGN.md  README.md  pyproject.toml
experiments/: run.py  sweep.py
experiments/configs/: baseline.yaml  fixed_enumerated.yaml  fixed_single.yaml  llm_deliberative.yaml  llm_reactive.yaml  market_llm.yaml  market_llm_fixed.yaml
src/agents/: base.py  llm_deliberative.py  llm_reactive.py  llm_utils.py  memory_agent.py  rule_based.py
src/core/: config.py  logging.py  rng.py  types.py
src/evaluation/: metrics.py  reports.py
src/llm/: backend.py  prompts.py  schemas.py
src/market/: catalog.py  matcher.py  matching.py  shocks.py  simulator.py
src/negotiation/: constraints.py  judge.py  parser.py  protocol.py  session.py
tests/: test_constraints.py  test_fixed_mode.py  test_judge.py  test_market_tick.py  test_parser.py  test_protocol.py  test_small_run.py
